# cosmos-curate

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.ci  GEMINI.md  ISSUES.md  MODEL_CARDS.md  README.md  RESPONSIBLE_USE.md  SECURITY.md  devset.sh  pixi.toml  pyproject.toml  pytest.ini  setup.py
.githooks/: submodule-check.sh
.github/: PULL_REQUEST_TEMPLATE.md  release-from-tag.yml
.github/ISSUE_TEMPLATE/: feature.md  question.md
.github/ISSUE_TEMPLATES/: bug.md
.github/workflows/: release-from-tag.yml
.gitlab/scripts/: build_xenna_wheel.sh  common.sh  k8s_gpu_tests.sh  k8s_helm_cleanup.sh  k8s_helm_test.sh  nvcf_helm_cleanup.sh  nvcf_helm_deploy.sh  nvcf_helm_validate.sh  nvcf_split_benchmark.sh  resolve_nvcf_staging_tag.sh  run_env_tests.sh  slurm_end_to_end.sh
.gitlab/vault/: ci-secrets.tmpl  vault-agent.config  vault-auth.sh
benchmarks/: __init__.py  cloudevent.py  merge_cpu_profiles.py  merge_memory_profiles.py  replay_traces.py  secrets.py  summary.py
benchmarks/split_pipeline/: __init__.py  deploy.json  invoke.json  nvcf_split_benchmark.py
charts/cosmos-curate/: .helmignore  Chart.yaml  README.md  values-standalone.yaml  values.yaml
charts/cosmos-curate/files/: extractor.py
charts/cosmos-curate/templates/: _helpers.tpl  curate-configmap.yaml  image-pull-secret.yaml  ngc-secret.yaml  otel-collector-config.yaml  ray-auth-token-secret.yaml  s3-secret.yaml  secret-extractor-configmap.yaml  service.yaml  servicemonitor.yaml  statefulset.yaml
cosmos_curate/: __init__.py
cosmos_curate/client/: __init__.py  cli.py  environment.pyi
cosmos_curate/client/image_cli/: __init__.py  image_app.py
cosmos_curate/client/local_cli/: __init__.py  launch_local.py
cosmos_curate/client/nvcf_cli/: __init__.py  launch_nvcf.py
cosmos_curate/client/slurm_cli/: __init__.py  prometheus_service_discovery.py  sbatch.sh.j2  slurm.py
cosmos_curate/client/utils/: __init__.py  conda_envs.py  docker_utils.py  validations.py
cosmos_curate/client/view_cli/: __init__.py  clip_viewer.py  viewer_app.py
cosmos_curate/configs/: all_models.json
cosmos_curate/core/: __init__.py
cosmos_curate/core/cf/: README.md  __init__.py  nvcf_main.py  nvcf_model_manager.py  nvcf_utils.py
cosmos_curate/core/interfaces/: __init__.py  model_interface.py  phase_interface.py  pipeline_interface.py  runner_interface.py  stage_interface.py
cosmos_curate/core/managers/: __init__.py  model_cli.py  postgres_cli.py
cosmos_curate/core/sensors/: __init__.py
cosmos_curate/core/utils/: args_utils.py  arrow_utils.py  azure_client.py  conda_utils.py  database_types.py  database_utils.py  environment.py  file_lock.py  filter_utils.py  model_utils.py  pixi_runtime_envs.py  presigned_s3_zip_utils.py  retry_utils.py  s3_client.py  s3_utils.py  storage_client.py  storage_utils.py  writer_utils.py
cosmos_curate/models/: README.md  __init__.py  _common.py  aesthetics.py  all_models.py  chat_lm.py  clip.py  clip_aesthetics.py  cosmos_embed1.py  cosmos_reason1_vl.py  gpt2.py  image_model.py  internvideo2_mm.py  paddle_ocr.py  phi_vl.py  prompts.py  qwen_lm.py  qwen_vl.py  sam3.py  seedvr2.py  t5_encoder.py  transnetv2.py  vllm_cosmos_reason1_vl.py  vllm_cosmos_reason2_vl.py  vllm_interface.py  vllm_model_ids.py  vllm_nemotron.py  vllm_phi.py  vllm_plugin.py  vllm_qwen.py  vllm_sentinels.py
cosmos_curate/models/configs/: internvideo2_mm_config_model.json  t5_encoder.json
cosmos_curate/pipelines/: README.md  __init__.py  common_pipeline_settings.py  pipeline_args.py
cosmos_curate/pipelines/av/: __init__.py  av_video_captioning_pipeline.py  av_video_ingesting_pipeline.py  av_video_pipelines_common.py  av_video_sharding_pipeline.py  av_video_splitting_pipeline.py  pipeline_args.py  run_pipeline.py
cosmos_curate/pipelines/common/: __init__.py  api_caption_utils.py  api_stage_async_utils.py  filter_prompts.py  model_constraints.py  openai_embedding_utils.py  semantic_filter_postprocess.py
cosmos_curate/pipelines/examples/: __init__.py  cosmos_reason1_vl.py  demo_task_chunking_pipeline.py  example_captioning_stages.py  hello_ray_data_pipeline.py  hello_world_pipeline.py  image_inference_pipeline.py  sam3_event_pipeline.py  super_resolution_pipeline.py
cosmos_curate/scripts/: __init__.py  onto_nvcf.py  onto_slurm.py
docs/: DEVELOPER_GUIDE.md  README.md
docs/client/: END_USER_GUIDE.md  NVCF_GUIDE.md
docs/curator/: ARCHITECTURE_GUIDE.md  ARTIFACT_TRANSPORT_GUIDE.md  DISTRIBUTED_TRACING_GUIDE.md  MULTICAM_DESIGN.md  OBSERVABILITY_GUIDE.md  PIPELINE_DESIGN_GUIDE.md  PROFILING_GUIDE.md  RAY_DATA_DESIGN.md  RAY_DATA_RUNNER_DESIGN.md  README.md  REFERENCE_PIPELINES_AV.md  REFERENCE_PIPELINES_GUIDE.md  REFERENCE_PIPELINES_IMAGE.md  REFERENCE_PIPELINES_VIDEO.md  SENSOR_LIBRARY.md  SENSOR_LIBRARY_EFFICIENT_VIDEO_DECODE.md  SLIM_IMAGE_DESIGN.md  SPEED_OF_LIGHT_DESIGN.md  STAGE_REPLAY.md  VLLM_ASYNC_CAPTIONING_GUIDE.md  VLLM_INTERFACE_DEBUG.md  VLLM_INTERFACE_DESIGN.md  VLLM_INTERFACE_PLUGIN.md
examples/osmo/: dedup_config.json  shard_config.json  split_config.json
examples/slurm/: ci_run_end_to_end.sh  source_me_env_vars.sh  source_me_slurm_env.sh  source_me_source_code_mount.sh  sync_config_creds_models.sh  sync_source_code.sh  upload_image.sh
examples/workflow/: .gitignore  example_input_file.json  example_nvcf_func_file.json  operate_nvcf_functions.py  template_invoke_video_split.json
package/: README.md
package/cosmos_curate/: activate_env.sh  deactivate_env.sh  default.dockerfile.jinja2  requirements-core.txt  requirements-regular.txt  requirements.txt
tests/: README.md  __init__.py
tests/benchmarks/: conftest.py  test_cloudevent.py  test_secrets.py  test_summary.py
tests/utils/: __init__.py  gpu_worker_limiter.py  sequential_runner.py  vllm_mock.py
tools/: sam3_bbox_demo.py
vault-ci/: ci-secrets.tmpl  vault-agent.config  vault-auth.sh
(+459 files in other folders)
